	  and monthly volume back to charts. Also restored the OBV and AD indictors by removing the
	  divisor to volume values.

20040214: Fixed bug that didn't refresh the group page if the group is renamed.

20040215: Added new chart type Candle and Candle 2. Candle is the traditional way of plotting candle
          charts. Candle 2 is the qtstalker custom way of candles.
	  

0.23
====

- Feature request #824930 applied. Moved html docs into /usr/share/doc/qtstalker/html

- Fixed bug #824922 - License is GPL not LGPL.

- Thanks to Marco van Zwetselaar for creating a Debian package. Marco is working on getting qtstalker into the main Debian
  distribution. This is exciting news.

- Fixed bug #825827 - MySQL plugin RH9 compile problem.

- Repackaged the db source to minimize size.

- Removed the CBOT plugin code. Given up hope for a work around.

- Added DDMMYYYY date format to the CSV plugin. Also added auto detection for date field delimiters (/-.).

- Fixed bug #830024 - single-click versus double-click with SymbolDialog.

- Fixed bug #830357 - synchronised cross-hairs, data values were switched.

- Added ability to stack indicators or add them to the tabs. Now you can view more than one tabbed indicator at a time.

- Changed the new indicator dialog. Combined several steps and dialogs into one. Introduces an option to put the
  indicator in either the tabs or stackable.

- Added a search function to the workwith charts tab.

- Added a new field format for the CSV plugin. SDOHLCV files can now be imported.

- Changed trend line dialog and creation functions to better handle extending them without user intervention.
  There are now 2 value options for the start and end points. You can either use the bar data OHLC or specify a value.
  The "Use Bar" toggle selects the bar fields to be used instead of a specific value. Trend lines will
  automatically extend as bars are added to the chart.
