@@ -26,7 +26,9 @@
 
 20040215: Added new chart type Candle and Candle 2. Candle is the traditional way of plotting candle
           charts. Candle 2 is the qtstalker custom way of candles.
-	  
+
+20040217: Fixed trendline bug that behaves erratically if the end point selected is <= the start point.
+
 
 0.23
 ====
